<resources>
    <string name="app_name">BellmanFord</string>

    <string name="btn_text_try_algorithm">Опробовать алгоритм</string>
    <string name="btn_text_developers">Разработчики</string>
    <string name="btn_text_algorithm_info">Как работает?</string>
    <string name="btn_text_algo_step_back">Назад</string>
    <string name="btn_text_algo_step_next">Вперед</string>
    <string name="btn_text_algo_step_to_end">В конец</string>


    <string name="txt_developers_header">Программа была разработана в рамках практического курса университета ЛЭТИ.</string>
    <string name="txt_developers_info">Разработчики: \nКамзолов Никита\nГладких Андрей\nМоисейченко Кирилл</string>

    <string name="txt_algorithm_name">Алгоритм Форда-Беллмана</string>

    <string name="content_description_back_button">Кнопка назад</string>
    <string name="content_description_algo_step_button">Кнопка показать шаг алгоритма</string>
    <string name="content_description_algo_info_button">Кнопка показать принцип работы алгоритма</string>

    <string name="content_description_algo_step_back_button">Кнопка перейти к предыдущему шагу алгоритма</string>
    <string name="content_description_algo_step_next_button">Кнопка перейти к следующему шагу алгоритма</string>
    <string name="content_description_algo_step_to_end_button">Кнопка перейти к последнему шагу алгоритма</string>

    <string name="hint_edge_weigt_input">Введите вес ребра</string>
    <string name="title_dialog_edge_weight_picker">Вес ребра</string>
    <string name="hint_vertex_name_input">Введите имя вершины</string>
    <string name="title_dialog_vertex_name_picker">Имя вершины</string>
    
    <string name="txt_dialog_positive_button">Ок</string>
    <string name="txt_dialog_negative_button">Отмена</string>

    <string name="toast_text_vertex_was_not_spawned">Вершина не была создана (%s)</string>
    <string name="toast_explanation_already_exist">вершина с таким именем уже существует</string>
    <string name="toast_explanation_name_not_entered">имя вершины не введено</string>

    <string name="txt_algorithm_step_default">
        %1$d. Рассматриваем ребро %2$s - %3$s\nСтарый путь до %4$s - %5$s\nРелаксируя ребро, можно дойти из %6$s до %7$s за %8$d
    </string>
    <string name="txt_algorithm_step_negative_cycle">%1$d. Нашли отрицательный цикл</string>
    <string name="txt_algorithm_path">%1$d. Из вершины %2$s можно дойти до вершины %3$s за %4$d</string>
    <string name="txt_algorithm_no_path">%1$d. Из вершины %2$s нет пути до вершины %3$s</string>

    <string name="txt_algorithm_info_text">Заводится массив расстояний d[0 … n-1], который после отработки алгоритма будет содержать ответ на задачу. В начале работы мы заполняем его следующим образом: d[v] = 0, а все остальные элементы d[] равны ∞. Сам алгоритм Форда-Беллмана представляет из себя несколько фаз. На каждой фазе просматриваются все рёбра графа, и алгоритм пытается произвести релаксацию (relax, ослабление) вдоль каждого ребра (a, b) стоимости c. Релаксация вдоль ребра — это попытка улучшить значение d[b] значением d[a] + c. Утверждается, что достаточно n-1 фазы алгоритма, чтобы корректно посчитать длины всех кратчайших путей в графе (если циклы отрицательного веса отсутствуют). Для недостижимых вершин расстояние d[] остаётся равным ∞. Алгоритм Беллмана-Форда позволяет очень просто определить, существует ли в графе отрицательный цикл, достижимый из вершины s. Достаточно произвести не n-1 фаз алгоритма, а ровно n фаз. Если при исполнении последней фазы длина кратчайшего пути до какой-либо вершины строго уменьшилась, то в графе есть отрицательный цикл, достижимый из s. На основе этого можно предложить следующую оптимизацию: отслеживать изменения в графе и, как только они закончатся, сделать выход из цикла (дальнейшие итерации будут бессмысленны).</string>
</resources>