<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="algorithmViewModel"
            type="com.example.android.bellmanford.algorithm.AlgorithmViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_algorithm_flt_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".algorithm.AlgorithmFragment"></FrameLayout>

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_15dp"
            android:contentDescription="@string/content_description_back_button"
            android:onClick="@{() -> algorithmViewModel.onBackNavigate()}"
            app:layout_constraintLeft_toLeftOf="@+id/btn_algo_step"
            app:layout_constraintRight_toRightOf="@id/btn_algo_step"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_algo_step"
            style="@style/AlgorithmStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_15dp"
            android:contentDescription="@string/content_description_algo_step_button"
            android:onClick="@{() -> algorithmViewModel.onAlgoStepShow()}"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <ImageButton
            android:id="@+id/btn_algo_info"
            style="@style/AlgorithmInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_15dp"
            android:contentDescription="@string/content_description_algo_info_button"
            android:onClick="@{() -> algorithmViewModel.onAlgoInfoShow()}"
            app:layout_constraintLeft_toLeftOf="@+id/btn_algo_step"
            app:layout_constraintRight_toRightOf="@id/btn_algo_step"
            app:layout_constraintTop_toBottomOf="@+id/btn_algo_step" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
