<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/popup_algorithm_step_img_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:background="@drawable/btn_popup_exit" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popup_algorithm_step_rv_step_explanation"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_rv_background"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popup_algorithm_step_img_btn_previous"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:layout_weight="1"

                android:background="@drawable/btn_algorithm_previous_step"
                android:text="@string/btn_text_algo_step_back"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popup_algorithm_step_img_btn_next"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_algorithm_next_step"
                android:text="@string/btn_text_algo_step_next"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/popup_algorithm_step_img_btn_to_end"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:background="@drawable/btn_algorithm_to_end"
            android:text="@string/btn_text_algo_step_to_end"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</layout>